Fix issue #156 - URL link for the openchain logo
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -8,7 +8,7 @@ $(document).ready( function() {
 </script>
 <nav class="navbar navbar-expand-lg navbar-dark nav-bg-dark navbar-fixed-top">
 	<div class="container container_padding ">
-	  <a class="navbar-brand openchain-logo append" href="index.html"><img src ="images/logo_openchain.png"></a>
+	  <a class="navbar-brand openchain-logo append" href="https://www.openchainproject.org/"><img src ="images/logo_openchain.png"></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
