Fix bad HTML on index page
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -53,12 +53,12 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
 	    </ul>
 	    </div>
 	    <div id="Guide">
-	    <h2 class="sub-heading translate" data-i18n="Learn More" >Learn More</h2>
-<p class="translate" data-i18n="Learn More_content" style="text-align:center"><iframe width="540" height="304" src="https://www.youtube.com/embed/Gk2_wJPSnI4?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+	       <h2 class="sub-heading translate" data-i18n="Learn More" >Learn More</h2>
+           <p class="translate" data-i18n="[html]Learn More_content">You can get more details about OpenChain Self-Certification here.</p>
 	    </div>
 	    <div id="PrintableGuide">
-	    <h2 class="sub-heading translate" data-i18n="Printable Guide" >Printable Version</h2>
-	    <p class="mr-100 translate" data-i18n="[html]offline-conformance-pdf">You can get the self-certification questionnaire in a printable and sharable format. You can download that <a href="https://openchain-project.github.io/conformance-questionnaire/questionnaire.pdf">here</a>.</p>
+	       <h2 class="sub-heading translate" data-i18n="Printable Guide" >Printable Version</h2>
+	       <p class="mr-100 translate" data-i18n="[html]offline-conformance-pdf">You can get the self-certification questionnaire in a printable and sharable format. You can download that <a href="https://openchain-project.github.io/conformance-questionnaire/questionnaire.pdf">here</a>.</p>
 	    </div>
 	    <div id="errors"></div>
 	    <div id="status"></div>
