--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -43,6 +43,9 @@ Author(s): ViSolve 03/01/2019
 	        <span class="translate" data-i18n="Specification Version">Specification Version</span> <span id="specVersion"></span>
 	        
 	    </h3>
+	    <div id="preamble">
+		    <span class="translate" data-i18n="preamble">We recommend having a look at the OpenChain Reference Training Slides and the OpenChain Reference Policy Template before undergoing Self-Certification. It will help frame the questions that follow.</span>
+	    </div>
 	    <div class="btn-group mr-2 d-flex justify-content-center row" role="group" ><button id="btSelectVersion" type="button" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Select Version">Select Version</span></button></div>
 	    <div id="CertForm">
 	    	<form id="myform"></form>
