--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -43,8 +43,11 @@ Author(s): ViSolve 03/01/2019
 	        <span class="translate" data-i18n="Specification Version">Specification Version</span> <span id="specVersion"></span><span id="ISOTitle"></span>
 	        
 	    </h3>
-	    <div class="btn-group mr-2 d-flex justify-content-center row" role="group" ><button id="btSelectVersion" type="button" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Select Version">Select Version</span></button></div>
-	    <div id="CertForm">
+	    <div id="CertChoiceButtonBar" class="btn-toolbar d-flex justify-content-center mr-40 " role="toolbar" aria-label="Toolbar with button groups">
+	       <div class="btn-group mr-2" role="group" aria-label="First group"><button id="btSelectVersion" type="button" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Select Version">Select Version</span></button></div>
+	       <div class="btn-group mr-2" role="group"  aria-label="Second group"><button id="btChangeLanguage" type="button" class="btn btn-primary"><i class="fa fa-language" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Change Language">Change Language</span></button></div>
+        </div>
+        <div id="CertForm">
 	    	<form id="myform"></form>
 	    </div>
 	   
@@ -76,6 +79,21 @@ Author(s): ViSolve 03/01/2019
 	            <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 	        </fieldset>
 	    </form>
+    </div>
+    <div id="changelanguage" title="Change Language">
+        <form>    
+            <span class="translate" data-i18n="select_language_content">Select the languge for the questionnaire.</span>
+            <fieldset>
+                <table>
+                    <tr>
+                        <td style="text-align: right; padding: 5px"><label for="languageSelect" class="translate" data-i18n="Language" >Language</label></td>
+                        <td style="text-align: left; padding: 5px"><select id="languageSelect"></select></td>
+                    </tr>
+                </table>
+                <!-- Allow form submission with keyboard without duplicating the dialog button -->
+                <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+            </fieldset>
+        </form>
     </div>
     <div id="resetsurvey" title="Reset Survey">
       <form>
