--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -43,11 +43,11 @@ Author(s): ViSolve 03/01/2019
 	        <span class="translate" data-i18n="Specification Version">Specification Version</span> <span id="specVersion"></span><span id="ISOTitle"></span>
 	        
 	    </h3>
-	    <div id="CertChoiceButtonBar" class="btn-toolbar d-flex justify-content-center mr-40 " role="toolbar" aria-label="Toolbar with button groups">
-	       <div class="btn-group mr-2" role="group" aria-label="First group"><button id="btSelectVersion" type="button" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Select Version">Select Version</span></button></div>
-	       <div class="btn-group mr-2" role="group"  aria-label="Second group"><button id="btChangeLanguage" type="button" class="btn btn-primary"><i class="fa fa-language" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Change Language">Change Language</span></button></div>
-        </div>
-        <div id="CertForm">
+	    <div id="preamble">
+		    <span class="translate" data-i18n="preamble">We recommend having a look at the OpenChain Reference Training Slides and the OpenChain Reference Policy Template before undergoing Self-Certification. It will help frame the questions that follow.</span>
+	    </div>
+	    <div class="btn-group mr-2 d-flex justify-content-center row" role="group" ><button id="btSelectVersion" type="button" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Select Version">Select Version</span></button></div>
+	    <div id="CertForm">
 	    	<form id="myform"></form>
 	    </div>
 	   
