Add captcha notice and terms
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -4,5 +4,6 @@
 	<div id="copyright">
 		<span class="translate" data-i18n="[html]Please contact"></span><br/>
 		<p><span class="translate" data-i18n="[html]footer_content"></span></p>
+		<p><span class="translate" data-i18n="[html]recaptcha_notice"></span></p>
 	</div>
 </div>
