Change spacing in footer
Fixes a UI spacing issue on the login page

Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -3,7 +3,7 @@
 	</div>
 	<div id="copyright">
 		<span class="translate" data-i18n="[html]Please contact"></span><br/>
-		<p><span class="translate" data-i18n="[html]footer_content"></span></p>
-		<p><span class="translate" data-i18n="[html]recaptcha_notice"></span></p>
+		<span class="translate" data-i18n="[html]footer_content"></span><br/>
+		<span class="translate" data-i18n="[html]recaptcha_notice"></span><br/>
 	</div>
 </div>
