Change URL for reCAPTCHA
Fixes #222

Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -38,7 +38,7 @@ Description: A new Responsive Template for login
     </script>
     <script src="resources/global.js"></script>   
     <script src="resources/navbar.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js?onload=loginOnloadCallback&render=explicit" async defer></script>
+    <script src="https://www.recaptcha.net/recaptcha/api.js?onload=loginOnloadCallback&render=explicit" async defer></script>
   </head>
   <body>
   
