--- a/WebContent/pwreset.html
+++ b/WebContent/pwreset.html
@@ -38,7 +38,7 @@ Author(s): ViSolve 03/01/2019
     <script src="resources/global.js"></script>   
     <script src="resources/navbar.js"></script>
     <script src="resources/pwreset.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js?onload=resetOnloadCallback&render=explicit" async defer></script>
+    <script src="https://www.recaptcha.net/recaptcha/api.js?onload=resetOnloadCallback&render=explicit" async defer></script>
   </head>
   <body>
   
