--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -39,7 +39,7 @@ Description: A new Responsive Template to receive the user inputs during Signup.
     <script src="resources/i18nextXHRBackend.js"></script>
     <script src="resources/global.js"></script>   
     <script src="resources/navbar.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+    <script src="https://www.recaptcha.net/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
     <script>
     // Simple script to setup the languages dropdown list
     $(document).ready( function() {
